from surgeon import Surgeon

class NonSeniorSurgeon(Surgeon):
    pass
