class Operation:
    def __init__(self, operation_id, patient):
        self.operation_id = operation_id
        self.patient = patient
