from surgeon import Surgeon

class SeniorSurgeon(Surgeon):
    pass
